--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "express-resource-plus",
   "description": "Provides RESTful routes for resources.",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stowns/express-resource-plus"
+    "url": "https://github.com/edahood/express-resource-plus"
   },
   "author": "Simon Townsend stowns3@gmail.com",
+  "contributor": "Eliot dahood eliot.dahood@gmail.com",
   "dependencies": {
     "lingo": ">=0.0.4",
     "methods": "0.0.1",
